[package]
name = "bench-server"
version = "0.1.0"
edition = "2021"

 
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#actix-web = { version = "4", features = ["openssl"] }
actix-web = { version = "4", features = ["rustls"] }
openssl = { version = "0.10" }
log = "0.4"
dotenv = "0.15"
clap = "3.2"
env_logger = "0.9.0"
mime = "0.3"
anyhow = "1.0"
rustls = "0.20.4"
rustls-pemfile = "1.0.0"