[package]
name = "bench-server"
version = "0.1.0"
edition = "2021"

 
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
with_openssl = ["actix-web/openssl", "openssl"]
with_rustls = ["actix-web/rustls", "rustls", "rustls-pemfile"]
default = ["with_rustls"]

[dependencies]
actix-web = { version = "4", features = ["rustls"]}
openssl = { version = "0.10", optional=true}
log = "0.4"
dotenv = "0.15"
clap = "3.2"
env_logger = "0.9.0"
mime = "0.3"
anyhow = "1.0"
rustls = {version = "0.20.4", optional=true}
rustls-pemfile = {version="1.0.0", optional=true}

